readme and working basic javafx